# color_palette_generator

./: README.md  color_palette_generator.py  generate_all.py  pyproject.toml
color_palette_generator/: cli.py
color_palette_generator/export/: json_export.py
color_palette_generator/palette/: __init__.py  loader.py
color_palette_generator/zed/: __init__.py  theme.py
palettes/: gruvbox-fun-light.json  gruvbox-fun.json  layered-plains.json
